--- a/InteractiveAutoInsuranceCalculator/InteractiveAutoInsuranceCalculator.html
+++ b/InteractiveAutoInsuranceCalculator/InteractiveAutoInsuranceCalculator.html
@@ -6,6 +6,7 @@
     <title>Калькулятор страхування авто</title>
     <link rel="stylesheet" href="./InteractiveAutoInsuranceCalculator.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../adaptation.css">
 </head>
 <body>
     <div class="container">
