додав кнопки на головну

--- a/InteractiveAutoInsuranceCalculator/InteractiveAutoInsuranceCalculator.html
+++ b/InteractiveAutoInsuranceCalculator/InteractiveAutoInsuranceCalculator.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../adaptation.css">
 </head>
 <body>
+    <a href="../public/index.html" class="home-button">На головну</a>
     <div class="container">
         <div class="card">
             <div class="card-header">
