--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,7 +18,7 @@
       </div>
       <div class="dashboard" id="dashboard">
         <h1>Панель Адміністратора</h1>
-
+        <a href="../public/index.html" class="home-button">На головну</a>
         <div class="stats-grid">
           <div class="stat-card">
             <h3>Користувачі</h3>
