--- a/CalculationofFuelConsumption/CalculationofFuelConsumption.html
+++ b/CalculationofFuelConsumption/CalculationofFuelConsumption.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-   
+    <a href="../public/index.html" class="home-button">На головну</a>
     <div class="container">
         <div class="calculator">
             <h2>Калькулятор витрат палива</h2>
