--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Ласкаво просимо!</h1>
+        <h1>Головна сторінка платформи</h1>
         <button class="button" onclick="redirectToRegistration()">Зареєструватися</button>
     </div>
     <script src="script.js"></script>
